# 3DOT

./: .gitignore  CMakeLists.txt  Makefile  README.md  bubble.cc  bubble.h  cmake_install.cmake  config.h  functions.h  invert.cc  ion.cc  ion.h  material.cc  material.h  mytrim_bub.cc  mytrim_nobub.cc  mytrim_range.cc  r250.h  sample.cc  sample.h  sample_clusters.cc  sample_clusters.h  sample_single.cc  sample_single.h  simconf.cc  simconf.h  trim.cc  trim.h
alglib/: CMakeLists.txt
output/temp/: readme.txt
